2012-06-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp:
	  Fix lospre nonforward-substitution of POINTER_SET.
	* src/SDCClospre.cc:
	  Improve handling of invalidation at POINTER_SET.

2012-06-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

 	* support/regression/tests/and_survive.c:
	  Test non-destructive and, regression test for #3534833.
	* support/regression/tests/gcc-torture-execute-980707-1.c:
	  Adapted and enabled test for mcs51.

2012-06-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/gen.c:
	  Fix cost calculation for branches.

2012-06-13 Leland Morrison <enigmalee AT sourceforge.net>

	* sdas/asz80/z80mch.c:  Allow the tst instruction for z180/.hd64 to
	  use the two operand form (tst a,X) (fixes bug #3534833)

2012-06-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCmain.c,
	  src/SDCCopt.c,
	  src/SDCCglobl.h:
	  Implement --nolospre option for disabling lospre.

2012-06-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.c:
	  Fix debug output for GET_VALUE_AT_ADDRESS right operand.

2012-06-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp:
	  Fix handling of IFX in forward substitution.

2012-06-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.cc:
	  Disable lospre of assignments with iTemp source.

2012-06-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Reorganize forward substitution code, lospre for GET_VALUE_AT_ADDRESS.

2012-06-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (decorateType, &/|/^): optimize bool with literal,
	  (optimizeGetAbit): prevent memory leak
	* src/SDCCcse.c (algebraicOpts): optimize bool XOR literal
	* src/SDCCsymt.c (computeType): also remove const from result,